cargo-features = ["edition2024"]

[package]
name = "launcher"
version.workspace = true
edition.workspace = true
repository.workspace = true
description = "Full fledged VSCode with everything you need to ship"

[lints]
workspace = true

[dependencies]
clap = { version = "4.5.21", features = ["derive", "cargo"]  }
