cargo-features = ["edition2024"]

[package]
name = "launcher"
version.workspace = true
edition.workspace = true
repository.workspace = true
description = "Quintessential development environment - powered by Open VSCode & VSX"

[lints]
workspace = true

[dependencies]
clap = { version = "4.5.21", features = ["derive", "cargo"] }
